<resources>
    <string name="app_name">CodeApps</string>

    <string name="player_name_hint">Nombre</string>
    <string name="insert_coin">Insertar Monedas</string>
    <string name="coin_amount_hint">Apuesta inicial</string>
    <string name="start_game">Iniciar</string>
    <string name="coin_amount" translatable="false">%1$d</string>
    <string name="welcome_image_desc" translatable="false">Descripción de la imagen de bienvenida</string>
    <string name="background_image_description" translatable="false">Fondo animado</string>
    <string name="music_off">Música OFF</string>
    <string name="music_on">Música ON</string>
    <string name="finish_ranking">Finalizar y ver ranking</string>
    <string name="start_play">Jugar</string>
    <string name="coins_play">Monedas a Jugar</string>
    <string name="username">Nombre Usuario</string>
    <string name="without_coins">Sin saldo</string>
    <string name="player_name_ranking">Jugador</string>
    <string name="date_play_ranking">Fecha</string>
    <string name="coins_ranking">Monedas</string>
    <string name="play_again_ranking">Jugar Otra Vez</string>
    <string name="capturar_pantalla">Capturar pantalla</string>
    <string name="savepoint_ranking">Guardar puntuación</string>
    <string name="exit">Salir</string>
    <string name="music_button_controller">Música</string>
    <string name="music_button_change">Elegir música</string>
    <string name="languagechoose">Elegir idioma</string>
    <string name="has_lanzado_1_euro">Has lanzado: -1 euro</string>
    <string name="has_ganado_10_euros">Has Ganado 10 euros</string>
    <string name="has_ganado_5_euros">Has Ganado 5 euros</string>
    <string name="default_web_client_id">163831715992-qlj2stoaq0n7pcnb4g5otg8aapdsulab.apps.googleusercontent.com</string>


</resources>