<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/machineslot"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/playerNameTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:text="@string/username"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/coinAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playerNameTextView"
        android:layout_marginStart="210dp"
        android:layout_marginTop="-22dp"
        android:text="@string/coins_play"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/mainActivityLl"
        android:layout_width="match_parent"
        android:layout_height="194dp"
        android:layout_marginTop="90dp"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="53dp"
        android:layout_below="@+id/coinAmountTextView"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/mainActivitySlot2"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:layout_width="0dp"/>

        <View
            android:layout_width="23dp"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/mainActivitySlot1"
            android:layout_height="match_parent"
            android:layout_weight="0.82"
            android:layout_width="0dp"/>
        <View
            android:layout_width="23dp"
            android:layout_height="match_parent"/>
        <ImageView
            android:id="@+id/mainActivitySlot3"
            android:layout_height="match_parent"
            android:layout_weight="0.82"
            android:layout_width="0dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/mainActivityBtJugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="472dp"
        android:text="@string/start_play"
        android:textSize="30sp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
    />

    <Button
        android:id="@+id/endGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/mainActivityBtJugar"
        android:layout_marginTop="157dp"
        android:text="@string/finish_ranking"
        android:textSize="25sp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
    />

    <Button
        android:id="@+id/button"
        android:layout_width="53dp"
        android:layout_marginStart="340dp"
        android:layout_height="wrap_content"
        android:text="\?" />
    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:visibility="gone" />

</RelativeLayout>
